# demo-flyps-api

./: .gitignore  README.md  pyproject.toml
flyps/: api.py  conftest.py  db.py  error.py  graphql.py  graphql_test.py  model.py  redis.py  test_user.py
flyps/file/: mutation.py  query.py  types.py
flyps/user/: mutation.py  query.py  types.py
flyps/user/note/: mutation.py  query.py  types.py
flyps/util/: operator.py
